Замечания учтены. Выполняется теперь через один цикл, вместо реализации используется общий класс (List)